<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tv_otel_rehberi_color"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_otel_rehberi_height"
            android:gravity="center"
            android:text="@string/tv_otel_rehberi_text"
            android:textColor="@color/tv_otel_rehberi_textcolor"
            android:textSize="@dimen/tv_otel_rehberi_textsize"
            android:textStyle="bold" />
    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:textColor="@color/tv_ara_text_color"
        android:textSize="@dimen/tel_text_size"
        android:textStyle="bold"
        android:text="@string/tv_text_ara" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dm_otel_rehberi_height"
            android:inputType="text"
            android:text="@string/et_ara_text"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_edge"
            android:layout_marginLeft="@dimen/margin_8dp" 
            android:layout_marginBottom="80dp"
            android:textSize="@dimen/et_ara_textsize">

            
        </EditText>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search" />

    </LinearLayout>

	

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/btn_rounded_edge"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="@dimen/tel_text_size"
        android:text="@string/btn_ist_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_below="@+id/button1"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@drawable/btn_rounded_edge"
        android:textSize="@dimen/tel_text_size"
        android:text="@string/btn_ant_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="@dimen/tel_text_size"
        android:background="@drawable/btn_rounded_edge"
        android:text="@string/btn_izm_text" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
         android:layout_height="@dimen/dm_otel_rehberi_height"
         android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="@dimen/tel_text_size"
        android:layout_marginTop="@dimen/margin_top30dp"
        android:background="@drawable/btn_rounded_edge"
        android:text="Button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
         android:layout_height="@dimen/dm_otel_rehberi_height"
         android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="@dimen/tel_text_size"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/btn_rounded_edge"
        android:layout_marginBottom="45dp"
        android:text="Button" />

</LinearLayout>

</RelativeLayout>
</ScrollView>