<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:fb="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/textview_layout">

<LinearLayout   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textview_layout"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="E-mail :" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@color/tv_ara_text_color"
        android:ems="10" >

        <requestFocus />
        
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="Şifre :" 
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_otel_rehberi_height"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@color/tv_ara_text_color"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@drawable/otel_button"
        android:text="@string/btn_giris" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top30dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@drawable/otel_button"
        android:text="@string/btn_uyeol" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        android:background="@drawable/otel_button"
        android:text="@string/btn_unuttum" />

    
    
     
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/btn_margin"
        android:layout_marginRight="@dimen/btn_margin"
        fb:login_text="Facebook ile giriş"
  		fb:logout_text="Logout"

        />

</LinearLayout>
</ScrollView>